internal/gatewayapi/testdata/grpcroute-with-valid-ratelimitfilter.in.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1beta1
  kind: Gateway
  metadata:
    namespace: envoy-gateway
    name: gateway-1
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
grpcRoutes:
- apiVersion: gateway.networking.k8s.io/v1alpha2
  kind: GRPCRoute
  metadata:
    namespace: default
    name: grpcroute-1
  spec:
    parentRefs:
    - namespace: envoy-gateway
      name: gateway-1
      sectionName: http
    rules:
    - filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.envoyproxy.io
          kind: RateLimitFilter
          name: test
      backendRefs:
      - name: service-1
        port: 8080
rateLimitFilters:
- apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: RateLimitFilter
  metadata:
    namespace: default
    name: test
  spec:
    type: Global
    global:
      rules:
      - clientSelectors:
        - headers:
          - name: x-user-id
            value: one
          - name: x-org-id
            type: Distinct
        limit:
          requests: 10
          unit: Hour
